# minidwarf

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LEADERBOARD.md  LICENSE  README.md  SPLITS.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/eval/: gemini-flash.yaml  qwen-coder-ollama.yaml  qwen-coder-vllm.yaml  qwen3-ollama.yaml  (+1 more)
harness/: driver.cu
minidwarf/: baselines.py  cli.py  compile.py  correctness.py  evalconfig.py  evaluate.py  extract.py  generate.py  grade.py  leaderboard.py  problem_io.py  runner.py  score.py  spec.py
scripts/: check_env.py  gen_prompt.py
tests/: test_baselines.py  test_check_env.py  test_cli.py  test_cli_eval.py  test_compile.py  test_correctness.py  test_evalconfig.py  test_evaluate.py  test_extract.py  test_generate.py  test_grade.py  test_leaderboard.py  test_models.py  test_openai_compat.py  test_problem_coulomb_1d.py  test_problem_csr_row_scale.py  test_problem_gauss_blur_2d.py  test_problem_gemm_bias.py  test_problem_gemv.py  test_problem_heat_2d_step.py  test_problem_io.py  test_problem_jacobi.py  test_problem_jacobi_sparse.py  test_problem_knn_distance_1d.py  test_problem_laplacian_2d_5pt.py  test_problem_nbody_count_within_radius.py  test_problem_nbody_gravity_force.py  test_problem_nbody_potential.py  test_problem_pairwise_mean_dist.py  test_problem_scaled_gemm.py  test_problem_sddmm.py  test_problem_sgemm.py  test_problem_sobel_2d.py  test_problem_spmm_csr.py  test_problem_spmv_csr.py  test_problem_spmv_transpose.py  test_problem_syrk.py  test_problem_transpose.py  test_problem_wave_2d_step.py  test_runner.py  (+4 more)
(+142 files in other folders)
