[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "minidwarf"
version = "0.1.0"
description = "HPC-first GPU kernel benchmark for LLMs, organized by the Berkeley Dwarfs"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "pyyaml>=6", "openai>=1.30"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
minidwarf = "minidwarf.cli:main"

[tool.setuptools]
packages = ["minidwarf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
